added some styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </header>
       <main class="hero">
         <div class="hero__left">
-          <img src="./Scarecrow.png" alt="Scarecrow" />
+          <img src="./Scarecrow.png" alt="Scarecrow" id="crow-img" />
         </div>
         <div class="hero__right">
           <h2 class="title">I have bad news for you</h2>
