desktop version almost done

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           <img src="./Scarecrow.png" alt="Scarecrow" id="crow-img" />
         </div>
         <div class="hero__right">
-          <h2 class="title">I have bad news for you</h2>
+          <h2 class="title">
+            I have bad news <br />
+            for you
+          </h2>
           <p class="about">
             The page you might be looking for might be removed or is temporarily
             unavailable
